minor fixes: card button spacing, text-card shadows

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2128,7 +2128,7 @@ p.with-badge .badge {
   transition: var(--transition-fast);
   box-shadow: var(--shadow-s);
 }
-.cards-container .card.text-card {
+.cards-container .card.text-card:hover {
   box-shadow: var(--shadow-m);
 }
 .card.text-card .text {
@@ -2138,7 +2138,8 @@ p.with-badge .badge {
   grid-area: 2 / 1 / 3 / 2;
 }
 .card.text-card .overlay-container {
-  grid-area: 1 / 1 / 3 / 2;
+  grid-area: 1 / 1 / 2 / 2;
+  /* grid-area: 1 / 1 / 3 / 2; */
 }
 
 /* text-card text overlay */
@@ -2157,7 +2158,7 @@ p.with-badge .badge {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 /* text-card text overlay contents */
 .card.text-card .overlay-container .badge {
@@ -2200,7 +2201,7 @@ p.with-badge .badge {
 .cards-container .card.product-card {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: min-content auto;
   gap: 0px 0px;
   padding: 0px;
   transition: var(--transition-fast);
@@ -2317,7 +2318,7 @@ p.with-badge .badge {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: 0.25rem;
+  padding: 0.5rem;
   margin-top: auto;
 }
 /* --- END product card --- */
